@@ -1,4 +1,7 @@
 2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/DisplayTabs/_GalleryTab.py: correctly update displaytab
+
+2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/GrampsDb/_GrampsInMemDB.py: xml load/save not working, fixed #1319
 
 2007-10-22  Douglas S. Blank  <dblank@cs.brynmawr.edu>
